--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <img src="photo_2025-03-31_23-58-08.jpg" alt="Фото профілю">
     <h2>Зоряна</h2>
     <div class="social-links">
-        <a href="#" target="_blank" class="instagram"><i class="fab fa-instagram"></i> VISALD</a>
+        <a href="instagram://user?username=zorixqq" target="_blank" class="instagram"><i class="fab fa-instagram"></i> VISALD</a>
         <a href="#" target="_blank" class="telegram"><i class="fab fa-telegram"></i> VISALD</a>
         <a href="#" target="_blank" class="tiktok"><i class="fab fa-tiktok"></i> VISALD</a>
     </div>
