--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
         <a href="instagram://user?username=zorixqq" target="_blank" class="instagram"><i class="fab fa-instagram"></i> VISALD</a>
         <a href="#" target="_blank" class="telegram"><i class="fab fa-telegram"></i> VISALD</a>
         <a href="#" target="_blank" class="tiktok"><i class="fab fa-tiktok"></i> VISALD</a>
+        <a href="https://ВАШ_САЙТ.com" target="_blank" rel="noopener noreferrer">Відкрити в браузерi</a>
+
     </div>
 </div>
 </body>
