--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
         .tiktok {
             background: #000;
         }
+        .brouse {
+            background: #000;
+        }
         .social-links a:hover {
             opacity: 0.8;
         }
@@ -85,10 +88,10 @@
     <img src="photo_2025-03-31_23-58-08.jpg" alt="Фото профілю">
     <h2>Зоряна</h2>
     <div class="social-links">
-        <a href="instagram://user?username=zorixqq" target="_blank" class="instagram"><i class="fab fa-instagram"></i> VISALD</a>
-        <a href="#" target="_blank" class="telegram"><i class="fab fa-telegram"></i> VISALD</a>
-        <a href="#" target="_blank" class="tiktok"><i class="fab fa-tiktok"></i> VISALD</a>
-        <a href="https://ВАШ_САЙТ.com" target="_blank" rel="noopener noreferrer">Відкрити в браузерi</a>
+        <a href="instagram://user?username=zorixqq" target="_blank" class="instagram"><i class="fab fa-instagram"></i>zorixqq</a>
+        <a href="t.me/zoriixxqq" target="_blank" class="telegram"><i class="fab fa-telegram"></i> zoriixxqq</a>
+        <a href="https://www.tiktok.com/@zorianaa_l" target="_blank" class="tiktok"><i class="fab fa-tiktok"></i> zorianaa_l</a>
+        <a href="https://k1d4-dev.github.io/social/" target="_blank" class="brouse" rel="noopener noreferrer">Відкрити в браузерi</a>
 
     </div>
 </div>
