--- a/index.html
+++ b/index.html
@@ -6,15 +6,6 @@
     <meta name="referrer" content="no-referrer-when-downgrade">
 
     <title>Мій профіль</title>
-    <script>
-    function openInDefaultBrowser() {
-        var ua = navigator.userAgent || navigator.vendor || window.opera;
-        if (ua.indexOf("TikTok") > -1) {
-            window.location.href = "googlechrome://" + window.location.href.replace(/^https?:\/\//, '');
-        }
-    }
-    openInDefaultBrowser();
-</script>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -83,6 +74,26 @@
         }
     </style>
 </head>
+
+    <script>
+    function detectTikTokBrowser() {
+        var ua = navigator.userAgent || navigator.vendor || window.opera;
+        if (ua.includes("TikTok")) {
+            document.getElementById("open-in-browser").style.display = "block";
+        }
+    }
+
+    function openInBrowser() {
+        var url = window.location.href;
+        if (/iPhone|iPad|iPod/.test(navigator.userAgent)) {
+            window.location = "googlechrome://" + url.replace(/^https?:\/\//, '');
+        } else {
+            window.location = "intent://" + url.replace(/^https?:\/\//, '') + "#Intent;scheme=https;package=com.android.chrome;end;";
+        }
+    }
+
+    detectTikTokBrowser();
+</script>
 <body>
 <div class="profile">
     <img src="photo_2025-03-31_23-58-08.jpg" alt="Фото профілю">
