--- a/index.html
+++ b/index.html
@@ -100,9 +100,10 @@
     <h2>Зоряна</h2>
     <div class="social-links">
         <a href="instagram://user?username=zorixqq" target="_blank" class="instagram"><i class="fab fa-instagram"></i>zorixqq</a>
-        <a href="t.me/zoriixxqq" target="_blank" class="telegram"><i class="fab fa-telegram"></i> zoriixxqq</a>
+        <a href="https://t.me/zoriixxqq" target="_blank" class="telegram"><i class="fab fa-telegram"></i> zoriixxqq</a>
         <a href="https://www.tiktok.com/@zorianaa_l" target="_blank" class="tiktok"><i class="fab fa-tiktok"></i> zorianaa_l</a>
-        <a href="https://k1d4-dev.github.io/social/" target="_blank" class="brouse" rel="noopener noreferrer">Відкрити в браузерi</a>
+       <a id="open-in-browser" href="#" onclick="openInBrowser()" style="display: none; background: red; color: white; padding: 10px; border-radius: 5px; text-align: center;">Відкрити в браузері</a>
+
 
     </div>
 </div>
