--- a/index.html
+++ b/index.html
@@ -7,12 +7,55 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         body {
-
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f4f4f4;
+            margin: 0;
+        }
+        .profile {
+            text-align: center;
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+        .profile img {
+            width: 120px;
+            height: 120px;
+            border-radius: 50%;
+            object-fit: cover;
+        }
+        .profile h2 {
+            margin: 10px 0;
+        }
+        .social-links {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .social-links a {
+            display: flex;
+            align-items: center;
+            text-decoration: none;
+            font-size: 18px;
+            margin: 8px 0;
+            padding: 8px 16px;
+            border-radius: 5px;
+            transition: 0.3s;
+            width: 200px;
+            justify-content: center;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            color: white;
+        }
+        .social-links a i {
+            margin-right: 10px;
             font-size: 24px;
         }
         .instagram {
             background: #E1306C;
-            background: #E4405F;
         }
         .telegram {
             background: #0088cc;
@@ -20,11 +63,9 @@
         .tiktok {
             background: #000;
         }
-     
         .social-links a:hover {
             opacity: 0.8;
         }
-      
     </style>
 </head>
 
