--- a/index.html
+++ b/index.html
@@ -78,10 +78,9 @@
         <a href="https://t.me/zoriixxqq" target="_blank" class="telegram"><i class="fab fa-telegram"></i> zoriixxqq</a>
         <a href="https://www.tiktok.com/@zorianaa_l" target="_blank" class="tiktok"><i class="fab fa-tiktok"></i> zorianaa_l</a>
       
-        <p>Якщо ви перейшли з тікток натисніть три крапки і відкрити в браузері</p>
+        <p>Якщо ви перейшли з тікток натисніть три крапки вгорі екрану і "Відкрити в браузері"</p>
     </div>
 </div>
-        detectTikTokBrowser();
     </script>
 </body>
 </html>
