--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <h2>Зоряна</h2>
     <div class="social-links">
         <a href="instagram://user?username=zorixqq" target="_blank" class="instagram"><i class="fab fa-instagram"></i>zorixqq</a>
-        <a href="https://t.me/zoriixxqq" target="_blank" class="telegram"><i class="fab fa-telegram"></i> zoriixxqq</a>
+        <a href="tg://resolve?domain=zoriixxqq" target="_blank" class="telegram"><i class="fab fa-telegram"></i> zoriixxqq</a>
         <a href="https://www.tiktok.com/@zorianaa_l" target="_blank" class="tiktok"><i class="fab fa-tiktok"></i> zorianaa_l</a>
       
         <p>Якщо ви перейшли з тікток натисніть три крапки вгорі екрану і "Відкрити в браузері"</p>
