--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="referrer" content="no-referrer-when-downgrade">
-    <title>Мій профіль</title>
+    <title>Буся</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         body {
@@ -72,7 +72,7 @@
 <body>
 <div class="profile">
     <img src="photo_2025-03-31_23-58-08.jpg" alt="Фото профілю">
-    <h2>Зоряна</h2>
+    <h2>Зоряна💋</h2>
     <div class="social-links">
         <a href="instagram://user?username=zorixqq" target="_blank" class="instagram"><i class="fab fa-instagram"></i>zorixqq</a>
         <a href="tg://resolve?domain=zoriixxqq" target="_blank" class="telegram"><i class="fab fa-telegram"></i> zoriixxqq</a>
