--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <a href="tg://resolve?domain=zoriixxqq" target="_blank" class="telegram"><i class="fab fa-telegram"></i> zoriixxqq</a>
         <a href="https://www.tiktok.com/@zorianaa_l" target="_blank" class="tiktok"><i class="fab fa-tiktok"></i> zorianaa_l</a>
       
-        <p>Якщо ви перейшли з тікток натисніть три крапки вгорі екрану і "Відкрити в браузері"</p>
+        <p>Якщо ви перейшли з TikTok натисніть три крапки вгорі екрану і "Відкрити в браузері"</p>
     </div>
 </div>
     </script>
